[project]
name = "log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch==2.1.1",
  "torchvision==0.16.1",
  "torchaudio==2.1.1",
  "pytorch-lightning==2.1.1",
  "numpy==1.26.0",
  "pandas>=2.2.3",
  "matplotlib>=3.10.1",
  "optuna==3.4.0",
  "botorch==0.9.4",
  "cmaes>=0.11.1",
  "pydoe2==1.3.0",
  "plotly>=6.0.1",
  "nvitop>=1.4.2",
  "seaborn>=0.13.2",
  "omegaconf>=2.3.0",
  "tensorboard>=2.19.0",
  "opencv-python==4.6.0.66",
  "albumentations>=2.0.5",
  "black>=25.1.0",
  "h5py>=3.13.0",
  "click>=8.1.8",
  "moviepy>=2.1.2",
  "timm==0.9.11",
  "pycocotools>=2.0.8",
  "einops==0.8.1",
  "python-evtx>=0.8.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
